<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_margin="5dp"
        android:background="@color/purple_200"
        android:backgroundTint="@color/purple_200"
        app:contentPadding="6dp">
        <ImageView
            android:id="@+id/img"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:padding="6dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="66dp">
            <TextView
                android:id="@+id/driver_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/driver_name"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:padding="3dp"
                android:textColor="@color/purple_500"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
            <TextView
                android:id="@+id/vehicle_make"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicle_make"
                android:paddingStart="3dp"
                android:textColor="@color/purple_500"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:id="@+id/reg_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registration_number"
                android:textColor="@color/purple_500"
                android:paddingStart="3dp"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>