<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/purple_200"
    tools:context=".AwaitingDriverFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_driver_coming"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:paddingTop="32dp"
            android:textSize="32sp"
            android:gravity="center_horizontal"

            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="Kindly Wait"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white"
            android:paddingTop="80dp"
            android:textSize="32sp"

            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:gravity="center_horizontal"
            android:paddingTop="16dp"
            android:text="Arrives in"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white"
            android:textSize="32sp"

            android:textStyle="bold" />

        <Chronometer
            android:id="@+id/chronometer"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:gravity="center_horizontal"
            android:paddingTop="32dp"
            android:countDown="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/purple_500"
            android:textSize="32sp"

            android:textStyle="bold" />
        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call_driver"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:backgroundTint="@color/purple_500"
            android:textColor="@color/purple_200"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_gravity="center_horizontal"
            app:cornerRadius="8dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Driver taking  too Long"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:paddingTop="16dp"
            android:textSize="32sp"
            android:gravity="center_horizontal"

            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        <Button
            android:id="@+id/next_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/purple_500"
            android:textColor="@color/purple_200"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_gravity="center_horizontal"
            app:cornerRadius="8dp"
            />
    </LinearLayout>

</FrameLayout>